name:                tidal-midi
version:             0.9
synopsis:            MIDI support for tidal
description:         MIDI support for Tidal. Supports Volca Keys, Bass and Beats and other synths. See "Sound.Tidal.MIDI.Stream" for an introduction. __Note:__ The interface is likely to change significantly.
homepage:            http://tidal.lurk.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
stability:           Experimental
copyright:           (c) Alex McLean and other contributors, 2015
category:            Sound
build-type:          Simple
cabal-version:       >=1.4

extra-source-files:
  README.md
                     
library
  exposed-modules: Sound.Tidal.MIDI.Stream
                   Sound.Tidal.MIDI.Output
                   Sound.Tidal.MIDI.Control
                   Sound.Tidal.MIDI.Device
                   Sound.Tidal.MIDI.VolcaBeats
                   Sound.Tidal.MIDI.VolcaBass
                   Sound.Tidal.MIDI.VolcaKeys
                   Sound.Tidal.MIDI.Tetra
                   Sound.Tidal.MIDI.Synth

                   
  build-depends: base < 5, tidal == 0.9, PortMidi == 0.1.6.0, time, containers, transformers

source-repository head
  type:          git
  location:      https://github.com/tidalcycles/tidal-midi.git